--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,15 +1,18 @@
 html
     head
+        include includes/meta.pug
         title elooly - Chat protocol 3000!
-        //link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/litera/bootstrap.min.css")
         
-        link(rel="stylesheet" href="/css/styles.css")
+        // Stylesheets
+        link(rel="stylesheet" href="/public/css/styles.css")
         
-        meta(name="viewport", content="width=device-width, initial-scale=1")
-        meta(http-equiv="content-type", content="text/html; charset=UTF-8")
-        
+        // JS
+        script(src='https://cdn.socket.io/socket.io-1.2.0.js')   
+        script(src='https://code.jquery.com/jquery-1.11.1.js')
+        //script(src='/socket.io/socket.io.js')
+        //script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js')
+  
         block scripts
         
     body
-            
         block content
