--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,12 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/*
+ * Define vars
+ */
+/*
+ * Reset
+ */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -35,9 +41,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-/*
- * Define vars
- */
 /*
  * Basic Styles
  */
@@ -99,7 +102,7 @@ body {
   padding: 8px;
   margin: 8px;
   border-radius: 4px;
-  background: blue;
+  background-color: #ee0099;
   color: #ffffff;
   max-width: 60vw; }
 
@@ -114,6 +117,12 @@ body {
   order: 0;
   flex: 0 1 auto;
   align-self: flex-end; }
+
+.server {
+  background-color: #f7f7f7;
+  color: #aaa;
+  flex: 0 1 auto;
+  align-self: stretch; }
 
 /*
  * Message Creator
