--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3,50 +3,8 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline; }
-
-/* HTML5 display-role reset for older browsers */
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; }
-
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote {
-  &:before, &:after {
-    content: '';
-    content: none; } }
-
-q {
-  &:before, &:after {
-    content: '';
-    content: none; } }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-
-
-/*
- * Define vars
- */
-$header-height: 50px;
-$footer-height: 40px;
-$side-margin: 8px;
+@import 'includes/vars';
+@import 'includes/reset';
 
 /*
  * Basic Styles
@@ -54,10 +12,10 @@ $side-margin: 8px;
 body{
   font-family: Helvetica, Arial, sans-serif;
   font-size: 14px;
-  background: #f7f7f7;
+  background: $grey100;
 }
 .header, .message-creator{
-  background-color: #fff;
+  background-color: $white;
 }
 
 /*
@@ -73,6 +31,7 @@ body{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 1000;
 }
 .nav{
   margin: $side-margin;
@@ -112,7 +71,7 @@ body{
   padding: $side-margin;
   margin: 8px;
   border-radius: 4px;
-  background: blue;
+  background-color: $primary;
   color: #ffffff;
   max-width: 60vw;
 }
@@ -122,11 +81,17 @@ body{
   align-self: flex-start;
 }
 .you{
-  background-color: #ededed;
+  background-color: $grey200;
   color: #333;
   order: 0;
   flex: 0 1 auto;
   align-self: flex-end;
+}
+.server{
+  background-color: $grey100;
+  color: #aaa;
+  flex: 0 1 auto;
+  align-self: stretch;
 }
 
 /*
@@ -159,6 +124,6 @@ body{
   font-size: 14px;
 }
 .btn-primary{
-  background-color: blue;
+  background-color: $primary;
   color: #fff;
 }
