--- a/views/includes/meta.pug
+++ b/views/includes/meta.pug
@@ -1,12 +1,12 @@
 // Must
-  meta(charset='utf-8')
+meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible', content='IE=edge')
 meta(name='viewport', content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no')
-meta(name='description', content='Description')
-meta(name='keywords', content='Keywords')
+meta(name='description', content='A simple chat application that acts more like live conversation than a memory forever on the internet')
+meta(name='keywords', content='socialmedia, chat, application, messaging, messenger,')
 
 // Android
-meta(name='theme-color', content='red')
+meta(name='theme-color', content='teal')
 meta(name='mobile-web-app-capable', content='yes')
 
 // iOS
@@ -17,8 +17,8 @@ meta(name='apple-mobile-web-app-status-bar-style', content='default')
 // Windows
 meta(name='msapplication-navbutton-color', content='red')
 meta(name='msapplication-TileColor', content='red')
-meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
-meta(name='msapplication-config', content='browserconfig.xml')
+//meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
+//meta(name='msapplication-config', content='browserconfig.xml')
 
 // Pinned Sites
 meta(name='application-name', content='Application Name')
