Turned off auto complete

--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -115,5 +115,5 @@ block content
       //-Messages go here
   .message-creator
     #message-creator.message-box
-      input#new-message.new-message(type="text")
+      input#new-message.new-message(type="text", autocomplete="off")
       button#message-send.btn.btn-primary Send
