Adjust saturation level of message colors

--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -30,7 +30,7 @@ block scripts
       if( !user_colors.hasOwnProperty(username) ){
       
         //This is client side only so it is not managed by a user;
-        user_colors[username] = "#"+Math.floor(Math.random()*16777215).toString(16);
+        user_colors[username] = "#"+Math.floor(Math.random()*16777215).toString(16)+"44";
       }
       
       //Set the background for this user
