--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -72,7 +72,7 @@ body{
   margin: 8px;
   border-radius: 4px;
   background-color: $primary;
-  color: #ffffff;
+  color: #333;
   max-width: 60vw;
 }
 .them{
