--- a/views/includes/meta.pug
+++ b/views/includes/meta.pug
@@ -10,13 +10,13 @@ meta(name='theme-color', content='teal')
 meta(name='mobile-web-app-capable', content='yes')
 
 // iOS
-meta(name='apple-mobile-web-app-title', content='Application Title')
+meta(name='apple-mobile-web-app-title', content='Chatlooly by elooly.com')
 meta(name='apple-mobile-web-app-capable', content='yes')
 meta(name='apple-mobile-web-app-status-bar-style', content='default')
 
 // Windows
-meta(name='msapplication-navbutton-color', content='red')
-meta(name='msapplication-TileColor', content='red')
+meta(name='msapplication-navbutton-color', content='teal')
+meta(name='msapplication-TileColor', content='teal')
 //meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
 //meta(name='msapplication-config', content='browserconfig.xml')
 
@@ -31,3 +31,13 @@ meta(name='imagemode', content='force')
 
 // Orientation
 meta(name='screen-orientation', content='portrait')
+
+// Splash screern
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~iphone~comany.png', media='(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)')
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~iphone~comany.png', media='(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)')
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~comanypng', media='(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)')
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~comany.png', media='(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)')
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~anyany.png', media='(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)')
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~anyany.png', media='(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)')
+link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~anyany.png', media='(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)')
+
