--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -116,7 +116,8 @@ block content
   .header
     .nav
       h1.logo
-        a(href="/") eChat
+        a(href="/")
+          img(src="/img/chatlooly_logo.svg", height="30", width="104", alt="Chatlooly")
       #rooms
   
   //-Messages box  
