Added meta for iOS app icons and corrected SVG logo for safari

--- a/views/includes/meta.pug
+++ b/views/includes/meta.pug
@@ -21,8 +21,8 @@ meta(name='msapplication-TileColor', content='teal')
 //meta(name='msapplication-config', content='browserconfig.xml')
 
 // Pinned Sites
-meta(name='application-name', content='Application Name')
-meta(name='msapplication-tooltip', content='Tooltip Text')
+meta(name='application-name', content='Chatlooly')
+meta(name='msapplication-tooltip', content='Simple chat')
 meta(name='msapplication-starturl', content='/')
 
 
@@ -41,3 +41,8 @@ link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~anyan
 link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~anyany.png', media='(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)')
 link(rel='apple-touch-startup-image', href='img/splash/ios/Default@2x~ipad~anyany.png', media='(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)')
 
+//App Icon
+link(rel='apple-touch-icon', href='/img/icons/ios/icon.png')
+link(rel='apple-touch-icon', sizes='152x152', href='/img/icons/ios/icon-76@2x.png')
+link(rel='apple-touch-icon', sizes='180x180', href='/img/icons/ios/icon-60@3x.png')
+link(rel='apple-touch-icon', sizes='167x167', href='/img/icons/ios/icon-167.png')
