Changed SERVER name to Chit Chatter

--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -41,7 +41,7 @@ block scripts
       if(this_user === username){
         message_class = "you";
       }
-      else if (username === "SERVER"){
+      else if (username === "Chit Chatter[server]"){
         message_class = "server";
         message_background = "none";
       }
