--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,6 @@
 html
     head
-        title elooly - Chat protocol 3000!
+        title Chatlooly by elooly.com
         
         // Stylesheets
         
