--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -125,6 +125,10 @@ block content
   //-Messages box  
   .message-container
     ul#messages
+      li.message.server(style="background-color: none;")
+        span.message_username chatlooly [server]
+        .message_content By using this service, you agree to our <a href="/privacy">privacy policy</a> and <a href="tos">terms of service</a>.
+      
       //-Messages go here
   .message-creator
     #message-creator.message-box
