Fixed link to point to correct TOS

--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -127,7 +127,7 @@ block content
     ul#messages
       li.message.server(style="background-color: none;")
         span.message_username chatlooly [server]
-        .message_content By using this service, you agree to our <a href="/privacy">privacy policy</a> and <a href="tos">terms of service</a>.
+        .message_content By using this service, you agree to our <a href="/privacy">privacy policy</a> and <a href="/tos">terms of service</a>.
       
       //-Messages go here
   .message-creator
