Removed overflow: hidden on the body tag to allow for proper page scrolling

--- a/views/chatterbox.pug
+++ b/views/chatterbox.pug
@@ -129,7 +129,7 @@ block content
         span.message_username chatlooly [server]
         .message_content By using this service, you agree to our <a href="/privacy">privacy policy</a> and <a href="/tos">terms of service</a>.
       
-      //-Messages go here
+      //-Messages go hereh
   .message-creator
     #message-creator.message-box
       input#new-message.new-message(type="text", autocomplete="off")
