--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
         // Stylesheets
         
         link(rel="stylesheet" href="/css/styles.css")
+        link(rel="stylesheet" href="/css/grid/grid.css")
         link(rel="manifest", href="/manifest.json")
         
         // JS
