--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,9 @@ html
         
         script(src='/socket.io/socket.io.js')
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js')
+        
+        link(rel='icon', type='image/png', sizes='32x32', href='/img/icons/favicon-32x32.png')
+
   
         block scripts
         
